--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,14 @@ body{
 .current{
     font-size: 30px;
 }
+
+footer {
+    margin-top: 20px;
+    text-align: center;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+}
