--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
     flex-direction: column;
     width: 100vw;
     height: 100vh;
-    background-color: grey;
+    background-color: lightslategray;
 }
 
 .btn{
